Fixed overflow on navbar on mobile viewport

--- a/main.css
+++ b/main.css
@@ -52,7 +52,7 @@ p {
 	padding: 10px 0;
     }
     .navbar a {
-	padding: 10px;
+	padding: 0;
 	font-size: 1.1rem;
 	width: 100%;
 	border-bottom: 1px solid rgba (255, 255, 255, 0.1);
@@ -119,7 +119,6 @@ img {
     gap: 20px;
     justify-items: center; /* Center items within their grid cells */
     align-items: start; /* Align items to the start of their cell */
-    padding: 0 0px; /* Add horizontal padding */
 }
 
 .shasta-terrace img {
